<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev">Prev Match</string>
    <string name="next">Next Match</string>
    <string name="favorites_team">Favorites Teams</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
