<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/prev"
        android:enabled="true"
        android:title="@string/prev"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/next"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/team"
        android:enabled="true"
        android:icon="@drawable/ic_teams"
        android:title="@string/teams"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/fav"
        android:title="@string/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favo"
        android:title="@string/favorites_team"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom"/>
</menu>